# singularity

./: .gitattributes  .gitignore  .mcp.json  CITATION.cff  CLAUDE.md  LICENSE  README.md  boundary.config.ts  bunfig.toml  eslint.config.ts  mise.toml  package.json  singularity  tsconfig.base.json  tsconfig.json  tsconfig.test.json  tsconfig.tools.json  vitest.config.ts
.claude/: settings.json
.githooks/: prepare-commit-msg
central/: CLAUDE.md  package.json  tsconfig.json
cli/: package.json  tsconfig.json
config/: CLAUDE.md
docs/: abstractions.md  events.md  plugins-compact.md  plugins-details.md  plugins.md  routes.md  setup.md  tasks-model.md
e2e/: block-selection-verify.mjs  caret-trigger-wedge.mjs  copy-paste-verify.mjs  crdt-adjacent-surfaces-verify.mjs  crdt-multitab-agent-verify.mjs  crdt-newblock-verify.mjs  crdt-offline-verify.mjs  crdt-reopen-verify.mjs  crdt-restore-verify.mjs  crdt-split-merge-verify.mjs  crdt-typing-verify.mjs  crdt-undo-verify.mjs  db-backup-expand.mjs  db-backup-screenshot.mjs  deep-link-restore.mjs  ensure-chromium.mjs  enter-at-start-verify.mjs  events-test-flow.mjs  history-nav.mjs  image-block.mjs  indent-caret-verify.mjs  live-state-churn.mjs  overscroll-hint-verify.mjs  perf.mjs  release-boot-verify.mjs  render-profile.mjs  screenshot.mjs  shared-websocket.mjs  sidebar-visibility.mjs  split-typing-window-probe.mjs  tabs-verify.mjs  (+1 more)
gateway/: CLAUDE.md  (+22 more)
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/frontend/: index.html
tauri/src-tauri/src/: lib.rs  main.rs
(+11893 files in other folders)
